# mmray

./: 404.html  TRE.py  generate_slurm_command_for_ray.py  index.html  mkdocs.yml  pyproject.toml
mmray/: TRE.py  __init__.py  generate_slurm_script_to_start_ray.py
