[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmray"
version = "0.0.1"
authors = [
  { name="Xinqiang Ding", email="Xinqiang.Ding@tufts.edu" }
]
description = "MMRay"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/DingGroup/MMRay"
"Bug Tracker" = "https://github.com/DingGroup/MMRay/issues"

[tool.hatch.build]
exclude = [
]

[project.scripts]
sray = "mmray.generate_slurm_script_to_start_ray:main"
